--- a/functions/package.json
+++ b/functions/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "firebase-admin": "^9.2.0",
     "firebase-functions": "^3.13.0",
-    "nodemailer": "^6.4.16"
+    "nodemailer": "^6.4.16",
+    "xlsx": "^0.16.9"
   },
   "devDependencies": {
     "eslint": "^5.12.0",
